new commit for add git

--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -1,6 +1,5 @@
-spring.application.name=order-service
-#logging.file.name=resources/logback.xml
-server.port=8083
+spring.application.name=user-service
+server.port=8082
 
 # Kafka producer
 spring.kafka.producer.bootstrap-servers=localhost:9092
@@ -14,7 +13,5 @@ spring.kafka.consumer.group-id=my-group
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 
-
-#logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} ${PID} %-5level %logger{36} - %msg%n
-#logging.level.org.springframework=INFO
-#logging.level.com.example=DEBUG
+server.error.include-message=always
+server.error.whitelabel.enabled=false
