--- a/user-service/pom.xml
+++ b/user-service/pom.xml
@@ -27,11 +27,13 @@
 			<artifactId>spring-boot-starter-security</artifactId>
 			<version>3.3.2</version>
 		</dependency>
-		<dependency>
-			<groupId>org.springframework.kafka</groupId>
-			<artifactId>spring-kafka</artifactId>
-			<version>3.0.0</version>
-		</dependency>
+
+
+<!--		<dependency>-->
+<!--			<groupId>org.springframework.kafka</groupId>-->
+<!--			<artifactId>spring-kafka</artifactId>-->
+<!--			<version>3.0.0</version>-->
+<!--		</dependency>-->
 <!--		<dependency>-->
 <!--			<groupId>org.springframework.kafka</groupId>-->
 <!--			<artifactId>spring-kafka-test</artifactId>-->
